--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${
 # JWT secret key
 security.jwt.secret-key =${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
-#
+
 # Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -22,3 +22,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.config.import=optional:file:.env[.properties]
+
+
+# Perspective API
+google.perspective.api.key=${PERSPECTIVE_API}
