--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.config.import=optional:file:.env[.properties]
 
 
 # Perspective API
-google.perspective.api.key=${PERSPECTIVE_API}
+google.perspective.api.key=${PERSPECTIVE_API_KEY}
